feat: add endpoint "/me/id"
